--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <form>
 Name: <input type="text" name="name" id="name">
-Phone: <input type="tel" name="phone" id="phone">
+Phones: <input type="tel" name="phone" id="phone">
 </form>
